[project]
name = "vllm-bench"
version = "0.1.0"
description = "Lightweight CLI to stress-test OpenAI-compatible servers (vLLM, Ollama, llama.cpp) with parallel requests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "psutil>=5.9",
]

[project.scripts]
vllm-bench = "bench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["bench.py"]
